Fix HLWR on firefox
Firefox doesn't support background-position-x, only background-position.
So I switched to that.

--- a/app/assets/stylesheets/_hotline_webring.scss
+++ b/app/assets/stylesheets/_hotline_webring.scss
@@ -28,11 +28,11 @@ section.hotline-webring {
 
   a.previous {
     background-image: url(asset-path('hlwr-prev.svg'));
-    background-position-x: left;
+    background-position: center left;
   }
 
   a.next {
     background-image: url(asset-path('hlwr-next.svg'));
-    background-position-x: right;
+    background-position: center right;
   }
 }
